--- a/HTML Code/login.html
+++ b/HTML Code/login.html
@@ -23,7 +23,7 @@
     <h2 style="margin-bottom: 20px;">Login to your account for better performance!</h2>
 
     <section class="login-section">
-        <form action="">
+        <form action="../Functional Code/connect_u.php" method="post">
             <label id="f-lable" for="f-email">Enter your email :</label>
             <input type="email" name="email" id="f-email"><br>
             <label id="f-lable" for="f-pass">Enter your password :</label>
